force-app/main/default/objects/CopadoTips__c/CopadoTips__c.object-meta.xml
<CustomObject>
    <description>Copado Tip of the Day:  documentation, tips, tricks, process reminders or best practices</description>
    <label>Copado Tip</label>
    <nameField>
        <label>Copado Tip Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Copado Tips</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>