force-app/main/default/objects/CopadoTips__c/fields/DefaultEndTime__c.field-meta.xml
<CustomField>
    <fullName>DefaultEndTime__c</fullName>
    <description>End time to display your Default tip</description>
    <inlineHelpText>End Display of Default Tip</inlineHelpText>
    <label>Default End Time</label>
    <type>DateTime</type>
</CustomField>