force-app/main/default/objects/CopadoTips__c/fields/DefaultStartTime__c.field-meta.xml
<CustomField>
    <fullName>DefaultStartTime__c</fullName>
    <description>Run the Default Tip for the duration of the date/time set by user.</description>
    <inlineHelpText>Set the time/date to run your default Copado Tip of the day.</inlineHelpText>
    <label>Default Start Time</label>
    <type>DateTime</type>
</CustomField>