force-app/main/default/objects/CopadoTips__c/fields/DefaultTip__c.field-meta.xml
<CustomField>
    <fullName>DefaultTip__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set the Tip as the default for a set of time, when used with the Date field. Should reset at the end of the date/time set.</description>
    <inlineHelpText>Default Tip of the day for a set period of time.</inlineHelpText>
    <label>Default Tip</label>
    <type>Checkbox</type>
</CustomField>