force-app/main/default/objects/CopadoTips__c/fields/TipCategory__c.field-meta.xml
<CustomField>
    <fullName>TipCategory__c</fullName>
    <description>What category does your tip fall under?</description>
    <inlineHelpText>What category does your tip fall under?</inlineHelpText>
    <label>Tip Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Best Practice</fullName>
            </value>
            <value>
                <fullName>How-to&apos;s</fullName>
            </value>
            <value>
                <fullName>DevOps Process</fullName>
            </value>
            <value>
                <fullName>Copado Methodology</fullName>
            </value>
            <value>
                <fullName>Release Manager</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>