force-app/main/default/objects/CopadoTips__c/fields/TipCount__c.field-meta.xml
<CustomField>
    <fullName>TipCount__c</fullName>
    <displayFormat>TC-{0000}</displayFormat>
    <externalId>true</externalId>
    <label>Tip #:</label>
    <type>AutoNumber</type>
</CustomField>