force-app/main/default/objects/CopadoTips__c/fields/TipDescription__c.field-meta.xml
<CustomField>
    <fullName>TipDescription__c</fullName>
    <label>Tip Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>