force-app/main/default/objects/CopadoTips__c/fields/TipEndTime__c.field-meta.xml
<CustomField>
    <fullName>TipEndTime__c</fullName>
    <description>Display the default Copado Tip record at this end Date/Time</description>
    <inlineHelpText>Display the default Copado Tip record at this End Date/Time</inlineHelpText>
    <label>Display Tip End Time</label>
    <type>DateTime</type>
</CustomField>