force-app/main/default/objects/CopadoTips__c/fields/TipStartTime__c.field-meta.xml
<CustomField>
    <fullName>TipStartTime__c</fullName>
    <description>Display the default Copado Tip record at this start Date/Time</description>
    <inlineHelpText>Display the default Copado Tip record at this start Date/Time</inlineHelpText>
    <label>Display Tip Start Time</label>
    <type>DateTime</type>
</CustomField>