force-app/main/default/objects/CopadoTips__c/fields/TipURL__c.field-meta.xml
<CustomField>
    <fullName>TipURL__c</fullName>
    <formula>HYPERLINK(&quot;boot-spare8-1.lightning.force.com/&quot; &amp; Id, TipCount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TipURL</label>
    <type>Text</type>
</CustomField>