force-app/main/default/objects/CopadoTips__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DefaultTip__c</columns>
    <columns>TipCount__c</columns>
    <columns>TipCategory__c</columns>
    <columns>TipDescription__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>TipEndTime__c</columns>
    <columns>TipStartTime__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CopadoTips__c.Master</value>
    </filters>
    <label>All</label>
</ListView>